se crea vista agregar empleado

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,3 +1,34 @@
 .nav{
-   background-color: @primaryColor;
+  background-color: @primaryColor;
+}
+.picker__box{
+  .picker__date-display{
+    background-color:@primaryColor;
+    .picker__weekday-display{
+      background-color:@primaryDark;
+    }
+  }
+
+.picker__calendar-container{
+  .picker__day--selected{
+    background-color:@primaryDark;
+  }
+
+  .picker__day--today{
+      color:@primaryDark;
+  }
+}
+
+.picker__footer{
+  .picker__today{
+      color:@primaryDark;
+  }
+
+  .picker__close{
+      color:@primaryDark;
+  }
+}
+
+
+
 }
