--- a/assets/styles/employee.less
+++ b/assets/styles/employee.less
@@ -1,4 +1,31 @@
 .employee-container{
+  background: url('https://raw.githubusercontent.com/MinDesigns/MinDesigns-Wallpapers/master/Wallpapers/5Shapes/Triangles.png')
+   no-repeat center center fixed;
+  background-size: cover;
+
+
+  &:before{
+    position: fixed;
+    content: " ";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: block;
+    z-index: 0;
+    background-color: @indigoTwoHundred;
+    mix-blend-mode: color;
+  }
+
+  select{
+    display: block;
+  }
+  .card{
+    .card-title{
+      margin: 0;
+      padding-top: 2%;
+    }
+  }
 
   .input-field label {
     color: @primaryText;
@@ -27,8 +54,8 @@
 
   /* valid color */
   .input-field input[type=text].valid {
-    border-bottom: 1px solid @accent;
-    box-shadow: 0 1px 0 0 @accent;
+    border-bottom: 1px solid @primaryDark;
+    box-shadow: 0 1px 0 0 @primaryDark;
   }
   /* invalid color */
   .input-field input[type=text].invalid {
